# imgcolorshine

./: .cursorrules  .gitignore  201.txt  ACCOMPLISHMENTS.md  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.poml  COVERAGE_REPORT.md  PLAN.md  README.md  REFACTOR_FILELIST.txt  TESTING_WORKFLOW.md  TODO.md  WORK_SUMMARY.md  build_ext.py  cleanup.sh  llms.txt  mypy.ini  pyproject.toml  simple_debug.py
.cursor/rules/: attractor-model.mdc  color-space-models.mdc  color-transformation-algorithms.mdc  data-flow-processing.mdc
.giga/: specifications.json
.github/workflows/: docs.yml  push.yml  release.yml
.specstory/history/: 2025-06-14_21-18-fix-phase-1-tasks-from-todo.md  2025-06-14_23-38-read-and-implement-todo-tasks.md  2025-06-15_00-36-refactor-tasks-for-parallel-execution.md  2025-06-15_11-32-disable-parallelization-in-pytest-tests.md  2025-06-15_12-55-add-scipy-library.md  2025-06-15_13-17-debugging-stuck-test-execution.md  2025-06-15_13-39-modify-repomix-command-for-npx-availability.md  2025-06-15_16-49-redirect-script-output-to-cleanup-log.md  2025-06-15_17-48-luminance-issue-in-image-processing.md  2025-06-15_20-01-analyze-codebase-and-modify-quicktest-sh.md  2025-06-15_21-55-read-and-implement-from-markdown-files.md  2025-06-15_22-27-refactor-code-for-build-compatibility.md  2025-06-16_00-11-review-todo-file-and-take-action.md
_github/workflows/: push.yml  release.yml
docs/: research1.md  research2.md  research3.md  research4.md  research5.md
imgcolorshine-rs/: CHANGELOG.md  Cargo.toml  PLAN.md  README.md  TODO.md  WORK.md
imgcolorshine-rs/.cargo/: config.toml  config.toml.bak
imgcolorshine-rs/issues/: 101.txt
imgcolorshine-rs/src/: error.rs  lib.rs  main.rs  utils.rs
imgcolorshine-rs/src/cli/: mod.rs
imgcolorshine-rs/src/color/: attractor.rs  conversions.rs  engine.rs  gamut.rs  mod.rs
imgcolorshine-rs/src/io/: mod.rs
imgcolorshine-rs/src/transform/: mod.rs
report/: perf_hotspots.md
src/imgcolorshine/: __init__.py  __main__.py  cli.py  color.py  color_engine.py  color_transforms_numba.py  colorshine.py  engine.py  falloff.py  fused_kernels.py  gamut.py  gamut_numba.py  gpu.py  gpu_backend.py  gpu_transforms.py  hierar.py  hierarchical.py  image_io.py  imgcolorshine.py  io.py  kernel.py  lut.py  py.typed  spatial.py  spatial_accel.py  trans_gpu.py  trans_numba.py  transform.py  transforms.py  utils.py
src/imgcolorshine/fast_mypyc/: __init__.py  cli.py  colorshine.py  colorshine_helpers.py  engine.py  engine_helpers.py  falloff.py  gamut.py  gamut_helpers.py  io.py  utils.py
src/imgcolorshine/fast_numba/: __init__.py  engine_kernels.py  engine_numba.py  falloff_numba.py  gamut_numba.py  numba_utils.py  trans_numba.py
src_docs/: mkdocs.yml
src_docs/md/: advanced-features.md  api-reference.md  basic-usage.md  color-science.md  development.md  index.md  installation.md  performance-optimization.md  quickstart.md  understanding-attractors.md
testdata/: example.sh  quicktest.sh
tests/: COVERAGE_REPORT.md  TESTING_WORKFLOW.md  conftest.py  debug_color_distances.py  debug_transformation.py  simple_debug.py  test_cli.py  test_cli_simple.py  test_color.py  test_colorshine.py  test_correctness.py  test_engine.py  test_engine_correctness.py  test_falloff.py  test_gamut.py  test_gpu.py  test_hierar.py  test_io.py  test_kernel.py  test_lut.py  test_main_interface.py  test_optimizations.py  test_package.py  test_performance.py  test_tolerance.py  test_trans_gpu.py  test_transform_coverage.py  test_utils_coverage.py
