[package]
name = "imgcolorshine-rs"
version = "0.1.0"
edition = "2021"
authors = ["Terry <noreply@terragonlabs.com>"]
description = "Ultrafast Rust port of imgcolorshine - Transform image colors using OKLCH color attractors"
license = "MIT"
homepage = "https://github.com/twardoch/imgcolorshine"
repository = "https://github.com/twardoch/imgcolorshine"
keywords = ["image", "color", "oklch", "transformation", "photography"]
categories = ["multimedia::images", "graphics", "command-line-utilities"]
readme = "README.md"
rust-version = "1.75"

[[bin]]
name = "imgcolorshine"
path = "src/main.rs"

[dependencies]
# Core image processing
image = "0.25"
imageproc = { version = "0.25", optional = true }

# Color space operations (CRITICAL - OKLCH support)
palette = { version = "0.7", features = ["std", "serde"] }

# Performance
rayon = { version = "1.8", optional = true }          # Parallelism
wide = { version = "0.7", optional = true }           # SIMD operations
ndarray = "0.15"       # Numerical arrays

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"         # Application errors
thiserror = "1.0"      # Library errors

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional GPU acceleration
wgpu = { version = "0.19", optional = true }

# Optional high-performance features
mimalloc = { version = "0.1", optional = true }

# System info
num_cpus = { version = "1.16", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
pretty_assertions = "1.4"

[features]
default = ["simd", "parallel"]
simd = ["wide"]
parallel = ["rayon", "imageproc", "num_cpus"]
gpu = ["wgpu"]
fast-alloc = ["mimalloc"]
full = ["simd", "parallel", "gpu", "fast-alloc"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
